--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./Business/app:/app/app
     entrypoint: [""]
-    command: ["python3","app/run.py"]
+    command: ["python3","app/app.py"]
     environment:
       - WEB_PORT=8100
       - INVENTORY_URL=http://careerhack-inventory:8200/api
@@ -31,7 +31,7 @@ services:
     volumes:
       - ./Inventory/app:/app/app
     entrypoint: [""]
-    command: ["python3","app/run.py"]
+    command: ["python3","app/app.py"]
     environment:
       - WEB_PORT=8200
     ports:
@@ -49,7 +49,7 @@ services:
     volumes:
       - ./Storage/app:/app/app
     entrypoint: [""]
-    command: ["python3","app/run.py"]
+    command: ["python3","app/app.py"]
     environment:
       - WEB_PORT=8300
     ports:
