--- a/Inventory/DockerFile
+++ b/Inventory/DockerFile
@@ -5,4 +5,4 @@ EXPOSE 8200
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
-ENTRYPOINT python3 app/run.py
+ENTRYPOINT python3 app/app.py
